--- a/index.html
+++ b/index.html
@@ -37,12 +37,14 @@
       </div>
       <!-- <p id="demo"></p> -->
       <div class="card p-4 d-none" id="mainContainer">
-        <h1 id="cityName"></h1>
-        <img
-          id="weather-icon"
-          style="width: 50px; height: 50px;"
-          alt="weather-icon"
-        />
+        <div class="d-flex">
+          <h1 id="cityName"></h1>
+          <img
+            id="weather-icon"
+            style="width: 50px; height: 50px;"
+            alt="weather-icon"
+          />
+        </div>
         <p id="currentHumidity"></p>
         <p id="currentTemp"></p>
         <p id="windSpeed"></p>
