--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
   <body>
     <h1 class="bg-dark text-white text-center">Weather Dashboard</h1>
     <main class="d-flex">
-      <div class="bg-dark p-3 d-flex flex-column">
-        <p class="">Search for a city</p>
-        <form>
+      <div class="bg-light p-3 d-flex flex-column vh-100">
+        <h5>Search for a city</h5>
+        <form class="d-flex">
           <input id="textInput" type="text" placeholder="Search for a city" />
           <button
             class="bg-primary text-white rounded"
@@ -33,10 +33,11 @@
             <i class="fas fa-search"></i>
           </button>
         </form>
-        <ul id="searchHistory"></ul>
+        <ul id="searchHistory" class="p-0"></ul>
       </div>
-      <!-- <p id="demo"></p> -->
-      <div class="card p-4 d-none" id="mainContainer">
+
+      <!-- beginning of currentWeather card -->
+      <div class="card p-4 d-none w-100 mx-3 h-2" id="mainContainer">
         <div class="d-flex">
           <h1 id="cityName"></h1>
           <img
